--- a/app/src/main/res/layout/fragment_v_v__call_.xml
+++ b/app/src/main/res/layout/fragment_v_v__call_.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/contentBodyColor"
     tools:context="com.example.Voice_Video_Call.VV_Call_Fragment">
 
 
@@ -16,7 +17,8 @@
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/contentTextColor"/>
 
     <TextView
         android:id="@+id/your_user_id"
@@ -26,7 +28,8 @@
         android:text="Your UserID:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_home_page" />
+        app:layout_constraintTop_toBottomOf="@id/user_home_page"
+        android:textColor="@color/contentTextColor"/>
 
     <TextView
         android:id="@+id/your_user_name"
@@ -36,7 +39,8 @@
         android:text="Your UserName:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/your_user_id" />
+        app:layout_constraintTop_toBottomOf="@id/your_user_id"
+        android:textColor="@color/contentTextColor"/>
 
 
     <LinearLayout
@@ -54,7 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Make a new call and invite other to join:" />
+            android:text="Make a new call and invite other to join:"
+            android:textColor="@color/contentTextColor"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/target_user_id"
@@ -63,11 +68,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:hint="Invitee UserID"
-            android:minWidth="164dp">
+            android:minWidth="164dp"
+            android:textColor="@color/contentTextColor">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/contentTextColor"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
