--- a/app/src/main/res/layout/activity_customer_main.xml
+++ b/app/src/main/res/layout/activity_customer_main.xml
@@ -8,6 +8,7 @@
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
+    android:background="@color/contentBodyColor"
     tools:context="com.example.customer.Customer_Main">
 
     <LinearLayout
