--- a/app/src/main/res/layout/activity_palm_ai_chatbot.xml
+++ b/app/src/main/res/layout/activity_palm_ai_chatbot.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/contentBodyColor"
     tools:context="com.example.palmchatbot.palm_ai_chatbot">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +27,25 @@
             app:layout_constraintBottom_toTopOf="@+id/send_ai_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.38"
+android:textColor="@color/contentTextColor"
+
+            />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@color/contentTextColor"
+            android:layout_marginBottom="152dp"
+            app:layout_constraintBottom_toTopOf="@+id/send_ai_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Input_Ai"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/send_ai_btn"
@@ -45,6 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="108dp"
             android:text="TextView"
+            android:textColor="@color/contentTextColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
