--- a/app/src/main/res/layout/fragment_customer_messaging_call.xml
+++ b/app/src/main/res/layout/fragment_customer_messaging_call.xml
@@ -4,7 +4,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.customer.Customer_Home_Fragment">
+    tools:context="com.example.customer.Customer_Messaging_Call_Fragment">
 
     <ScrollView
         android:layout_width="match_parent"
