--- a/app/src/main/res/layout/chat_item_layout.xml
+++ b/app/src/main/res/layout/chat_item_layout.xml
@@ -10,10 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:cardBackgroundColor="@color/red"
+        android:layout_marginBottom="16dp"
+        android:outlineProvider="background"
+        app:cardBackgroundColor="@color/material_dynamic_neutral_variant90"
         app:cardCornerRadius="8dp"
+        app:cardElevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -26,74 +30,73 @@
                 android:id="@+id/chat_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="Anthony Tan - Scam Prevention Unit"
-                android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="parent"
+                android:textColor="#091E28"
+                app:layout_constraintStart_toEndOf="@+id/chat_item_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/chat_item_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:fontFamily="@font/gothic_a1_medium"
+                android:fontFamily="@font/poppins_light"
                 android:text="Category: Scam"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/white"
+                android:textColor="#091E28"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/chat_item_title"
                 app:layout_constraintTop_toBottomOf="@+id/chat_item_title" />
 
             <TextView
                 android:id="@+id/chat_item_lastmsg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
                 android:ems="20"
-                android:fontFamily="@font/gothic_a1_medium"
+                android:fontFamily="sans-serif-thin"
                 android:lines="1"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mollis nisi a turpis ultrices fermentum."
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="@color/white"
+                android:textColor="#091E28"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/chat_item_category"
                 app:layout_constraintTop_toBottomOf="@+id/chat_item_category" />
 
             <TextView
                 android:id="@+id/chat_item_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/white"
                 android:gravity="center"
                 android:text="Thu 12:59"
-                android:textColor="@color/white"
+                android:textColor="#091E28"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/chat_item_icon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:foregroundTint="@color/white"
-                app:layout_constraintBottom_toBottomOf="@+id/chat_item_title"
-                app:layout_constraintStart_toEndOf="@+id/chat_item_title"
-                app:layout_constraintTop_toTopOf="@+id/chat_item_title"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:scaleType="centerInside"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/nav_call"
-                app:tint="#FFFFFF" />
+                app:tint="@color/material_dynamic_secondary10" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
