--- a/app/src/main/res/layout/fragment_chatbot_old.xml
+++ b/app/src/main/res/layout/fragment_chatbot_old.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.palmchatbot.palm_ai_chatbot">
+    tools:context="com.example.palmchatbot.Chatbot_OLD_Fragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="409dp"
