--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -128,6 +128,7 @@
 
         <EditText
             android:id="@+id/chat_message"
+            style="@style/Widget.AppCompat.EditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -140,11 +141,14 @@
             android:fontFamily="sans-serif"
             android:foreground="@drawable/chat_outline"
             android:hint="@string/enter_message"
-            android:imeOptions="actionDone"
-            android:inputType="text|textMultiLine"
+            android:imeOptions="actionDone|actionSend"
+            android:inputType="text|textAutoCorrect"
             android:maxLines="6"
             android:minHeight="48dp"
-            android:padding="12dp"
+            android:paddingStart="12dp"
+            android:paddingTop="12dp"
+            android:paddingEnd="80dp"
+            android:paddingBottom="12dp"
             android:singleLine="false"
             android:textColorHint="#8D6E63"
             tools:ignore="Autofill" />
