--- a/app/src/main/res/layout/fragment_customer__home.xml
+++ b/app/src/main/res/layout/fragment_customer__home.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello,"
+            android:text="@string/helloq"
             android:textSize="35sp"
             android:textStyle="bold"
             android:textColor="@color/contentTextColor"
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
+                android:id="@+id/name"
                 android:textColor="@color/purple_700"
                 android:textSize="35sp"
                 android:textStyle="bold" />
@@ -95,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Quick \nConnect"
+                        android:text="@string/quick_nconnect"
                         android:textColor="@color/white"
                         android:textSize="25sp"
                         android:textStyle="bold" />
@@ -105,7 +106,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Instant Customer Service Assistance"
+                        android:text="@string/instant_customer_service_assistance"
                         android:textColor="@color/white"
                         android:textSize="10sp"
                         android:textStyle="bold" />
@@ -154,7 +155,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Message \nUs"
+                        android:text="@string/message_nus"
                         android:textColor="@color/white"
                         android:textSize="25sp"
                         android:textStyle="bold" />
@@ -164,7 +165,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Get in touch with out team"
+                        android:text="@string/get_in_touch_with_out_team"
                         android:textColor="@color/white"
                         android:textSize="10sp"
                         android:textStyle="bold" />
@@ -221,7 +222,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:lines="2"
-                                android:text="Voice/Video Call"
+                                android:text="@string/voice_video_call_"
                                 android:textColor="@color/white"
                                 android:textSize="25sp"
                                 android:textStyle="bold"
@@ -239,7 +240,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="1"
-                        android:text="Get in touch with out team"
+                        android:text="@string/get_in_touch_with_out_team_"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="15sp"
@@ -307,7 +308,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="QC\nChatBot"
+                        android:text="@string/qc_nchatbot"
                         android:textColor="@color/white"
                         android:textSize="25sp"
                         android:textStyle="bold" />
@@ -317,7 +318,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="AI-Powered QuickConnect Chatbot"
+                        android:text="@string/ai_powered_quickconnect_chatbot"
                         android:textColor="@color/white"
                         android:textSize="10sp"
                         android:textStyle="bold" />
@@ -366,7 +367,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="2"
-                        android:text="Profile"
+                        android:text="@string/profile_"
                         android:textColor="@color/white"
                         android:textSize="25sp"
                         android:textStyle="bold" />
@@ -376,7 +377,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:lines="2"
-                        android:text="User Profile and settings"
+                        android:text="@string/user_profile_and_settings"
                         android:textColor="@color/white"
                         android:textSize="10sp"
                         android:textStyle="bold" />
@@ -436,7 +437,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:lines="2"
-                                android:text="Reconnect and Chat"
+                                android:text="@string/reconnect_and_chat"
                                 android:textColor="@color/white"
                                 android:textSize="25sp"
                                 android:textStyle="bold"
@@ -454,7 +455,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:lines="1"
-                        android:text="Reconnect with Ease"
+                        android:text="@string/reconnect_with_ease"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textSize="15sp"
