--- a/app/src/main/res/layout/nav_employee_m_header.xml
+++ b/app/src/main/res/layout/nav_employee_m_header.xml
@@ -6,7 +6,7 @@
     android:layout_height="176dp"
     android:gravity="bottom"
     android:padding="16dp"
-    android:background="@drawable/headerbkg"
+    android:background="@drawable/side_nav_bar"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
     <ImageView
         android:id="@+id/nav_profilepic_e_m"
