--- a/app/src/main/res/layout/activity_customer_main.xml
+++ b/app/src/main/res/layout/activity_customer_main.xml
@@ -8,7 +8,6 @@
     android:id="@+id/drawer_layout"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    android:background="@color/contentBodyColor"
     tools:context="com.example.customer.Customer_Main">
 
     <LinearLayout
@@ -21,9 +20,8 @@
             android:layout_height="56dp"
             android:id="@+id/toolbar"
             android:elevation="4dp"
-            android:background="@color/red"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+            android:background="@color/nav_bar_color"
+            android:popupTheme="@style/Base.Theme.QuickConnect"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -40,7 +38,9 @@
         app:headerLayout="@layout/nav_customer_header"
         app:menu="@menu/nav_customer_menu"
         app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"/>
+        app:itemTextColor="@color/menu_text_color"
+        android:background="@color/menu_background_color"
+        />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
