--- a/app/src/main/res/layout/activity_employee_mmain.xml
+++ b/app/src/main/res/layout/activity_employee_mmain.xml
@@ -20,7 +20,7 @@
             android:layout_height="56dp"
             android:id="@+id/toolbar"
             android:elevation="4dp"
-            android:background="@color/red"
+            android:background="@color/nav_bar_color"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
