--- a/app/src/main/res/layout/activity_registration_selection_page.xml
+++ b/app/src/main/res/layout/activity_registration_selection_page.xml
@@ -36,7 +36,7 @@
                 android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:gravity="center"
-                android:text="Which account do you want to register?"
+                android:text="@string/which_account_do_you_want_to_register"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="#FF0000"
                 android:textSize="24sp" />
@@ -50,7 +50,7 @@
                 android:layout_marginTop="40dp"
                 android:fontFamily="@font/gothic_a1_semibold"
                 android:gravity="center"
-                android:text="Customer"
+                android:text="@string/customer"
                 android:textSize="18sp"
                 app:icon="@drawable/nav_profile" />
 
@@ -64,7 +64,7 @@
                 android:layout_marginBottom="40dp"
                 android:fontFamily="@font/gothic_a1_semibold"
                 android:gravity="center"
-                android:text="Employee"
+                android:text="@string/employee"
                 android:textSize="18sp"
                 app:icon="@drawable/baseline_assignment_turned_in_24" />
         </LinearLayout>
