--- a/app/src/main/res/layout/fragment_customer__quick_connect_.xml
+++ b/app/src/main/res/layout/fragment_customer__quick_connect_.xml
@@ -21,7 +21,7 @@
         android:background="@drawable/roundedcorners"
         android:backgroundTint="@color/material_dynamic_neutral90"
         android:gravity="top"
-        android:hint="Describe your enquiry"
+        android:hint="@string/describe_your_enquiry"
         android:inputType="textMultiLine"
         android:outlineProvider="background"
         android:padding="12dp"
@@ -37,7 +37,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="#F44336"
-        android:text="Send"
+        android:text="@string/send_"
         android:textColor="@color/contentTextColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Enter an enquiry here for us to suggest a channel for you:"
+        android:text="@string/enter_an_enquiry_here_for_us_to_suggest_a_channel_for_you"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="OR \n choose one yourself"
+        android:text="@string/or_n_choose_one_yourself"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#F44336"
-        android:text="Create New Chat"
+        android:text="@string/create_new_chat"
         app:icon="@drawable/baseline_message_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +107,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#F44336"
-        android:text="Create a Call Request"
+        android:text="@string/create_a_call_request"
         app:icon="@drawable/nav_call"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#F44336"
-        android:text="Go to FAQ"
+        android:text="@string/go_to_faq"
         app:icon="@drawable/nav_about"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,7 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Help Channels"
+        android:text="@string/help_channels"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Enquiry Helper"
+        android:text="@string/enquiry_helper"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
