--- a/app/src/main/res/layout/fragment_customer_messaging_call.xml
+++ b/app/src/main/res/layout/fragment_customer_messaging_call.xml
@@ -32,7 +32,8 @@
                 app:layout_constraintEnd_toStartOf="@+id/newcall"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/newcall" />
+                app:layout_constraintTop_toTopOf="@+id/newcall"
+                />
 
             <TextView
                 android:id="@+id/textView3"
@@ -40,7 +41,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Chats"
+                android:text="@string/chats"
+                android:textColor="@color/contentTextColor"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Call Requests"
+                android:text="@string/call_requests"
+                android:textColor="@color/contentTextColor"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="New Call"
+                android:text="@string/new_call"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
