--- a/app/src/main/res/layout/fragment_language__change.xml
+++ b/app/src/main/res/layout/fragment_language__change.xml
@@ -15,7 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:textColor="@color/contentTextColor"/>
 
     <TextView
         android:id="@+id/textView17"
