--- a/app/src/main/res/layout/nav_customer_header.xml
+++ b/app/src/main/res/layout/nav_customer_header.xml
@@ -6,8 +6,8 @@
     android:layout_height="176dp"
     android:gravity="bottom"
     android:padding="16dp"
-    android:background="@drawable/headerbkg"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:background="@drawable/side_nav_bar"
+    >
     <ImageView
         android:id="@+id/nav_header_profile_customer"
         android:layout_width="wrap_content"
