--- a/app/src/main/res/menu/nav_customer_menu.xml
+++ b/app/src/main/res/menu/nav_customer_menu.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:theme="@style/Base.Theme.QuickConnect"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view">
+    tools:showIn="navigation_view"
+    >
 
-    <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single"
+        >
         <item
             android:id="@+id/nav_c_home"
             android:icon="@drawable/nav_home"
-            android:title="@string/Home"/>
+            android:title="@string/Home"
+
+            />
         <item
             android:id="@+id/nav_c_Voice_Video_Call"
             android:icon="@drawable/call_icon_phone"
@@ -28,7 +32,8 @@
         <item
             android:id="@+id/nav_c_quickconnect"
             android:icon="@drawable/quick_connect"
-            android:title="@string/quickconnect" />
+            android:title="@string/quickconnect"
+            />
         <item
             android:id="@+id/nav_c_profile"
             android:icon="@drawable/nav_profile"
