--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,33 +4,15 @@
         <!-- Customize your light theme here. -->
        <item name="colorPrimary">#FF390F</item>
         <item name="colorPrimaryVariant">@color/red</item>
-        <item name="colorOnPrimary">@color/white</item>
-    </style>
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-
-        <!-- provided green color to the ActionBar -->
-        <item name="colorPrimary">#0F9D58</item>
-        <item name="colorPrimaryDark">@color/red</item>
-        <item name="colorAccent">@color/red</item>
-    </style>
-    <style name="Theme.QuickConnect" parent="Base.Theme.QuickConnect" />
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="iconTint">#FFFFFF</item>
 
 
-    <!-- Base application theme. -->
-    <style name="Theme.Chatapp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/main</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/main</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
-        <!-- Customize your theme here. -->
     </style>
+
+
+
+
 
 
     <!--styles for education app-->
