--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -58,4 +58,6 @@
     <color name="contentTextColor">#020000</color>
     <color name="imageBorderColor">#E01E7A</color>
     <color name="miniTitle">#2A2E43</color>
+    <color name="voice_call_selected1">#11FD00</color>
+    <color name="voice_call_normal">#01DAFF</color>
 </resources>
